intermediate commit 4; attempts to use C++ protobuf for brave-sync

--- a/components/resources/BUILD.gn
+++ b/components/resources/BUILD.gn
@@ -21,6 +21,20 @@ transpile_includes = [
   "../brave_new_tab_ui/reducers/newTabReducer.js",
   # Brave payments
   "../brave_payments_ui/brave_payments.html",
+  # Brave sync
+  "../brave_sync_ui/brave_sync.html",
+  "../brave_sync_ui/brave_sync.js",
+  # Brave sync lib
+  "../brave_sync_ui/brave_sync_lib.html",
+  "../brave_sync_ui/brave_sync_lib.js",
+  # QR lib
+  "//brave/node_modules/qrcode-generator/qrcode.js",
+  # Brave sync js bundle
+  #"//brave/vendor/brave-sync/bundles/bundle.js",
+  "$root_gen_dir/brave-sync/bundles/bundle.js",
+  # Brave Crypto
+  #"//brave/vendor/brave-crypto/browser/crypto.js",
+  "$root_gen_dir/brave-crypto/browser/crypto.js",
 ]
 
 action("transpile_web_uis") {
@@ -29,6 +43,9 @@ action("transpile_web_uis") {
   outputs = [
     "$target_out_dir/brave_new_tab.bundle.js",
     "$target_out_dir/brave_payments.bundle.js",
+
+    "$target_out_dir/brave_sync.bundle.js",
+    #"$target_out_dir/brave_sync_lib.bundle.js",
   ]
   gen_dir = rebase_path(root_gen_dir, "//")
   args = [
@@ -39,6 +56,11 @@ action("transpile_web_uis") {
       "--production",
     ]
   }
+
+  deps = [
+    "//brave/components/brave_sync_ui:brave_sync_js_lib_bundle",
+    "//brave/components/brave_sync_ui:brave_crypto_js_lib_bundle",
+  ]
 }
 
 grit("brave_components_resources_grit") {
@@ -59,5 +81,9 @@ grit("brave_components_resources_grit") {
   ]
   output_dir = "$root_gen_dir/components"
   resource_ids = "//brave/browser/resources/resource_ids"
-}
 
+  deps += [
+    "//brave/components/brave_sync_ui:brave_sync_js_lib_bundle",
+    "//brave/components/brave_sync_ui:brave_crypto_js_lib_bundle",
+  ]
+}
