--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -76,7 +76,9 @@ source_set("browser") {
 
   deps = [
     "//brave/components/brave_shields/browser:brave_shields",
+    "//brave/components/brave_sync",
     "//brave/components/omnibox/browser:brave_autocomplete",
+    "//brave/components/sync/driver:brave_sync_subclassing",
     "extensions",
     "net",
   ]
