--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -29,6 +29,12 @@ source_set("ui") {
     "webui/brave_welcome_ui.h",
     "webui/new_tab_html_source.cc",
     "webui/new_tab_html_source.h",
+    "webui/sync/sync_ui_impl.cc",
+    "webui/sync/sync_ui_impl.h",
+    "webui/sync/sync_ui.h",
+    "webui/sync/sync_js_layer.h",
+    "webui/sync/sync_js_layer_impl.cc",
+    "webui/sync/sync_js_layer_impl.h",
   ]
 
   if (is_mac && !mac_views_browser) {
