--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "brave-ui": "^0.10.3",
-    "emptykit.css": "^1.0.1"
+    "emptykit.css": "^1.0.1",
+    "qrcode-generator": "^1.4.0"
   }
 }
