--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "typescript": "^2.8.1"
   },
   "dependencies": {
-    "brave-ui": "^0.12.2",
+    "brave-ui": "0.20.0-beta.6",
     "emptykit.css": "^1.0.1",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
