Define chromium version by fetching version info from package.json

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -42,7 +42,8 @@ action("generate_version") {
   ]
   inputs = [ "../../package.json" ]
   outputs = [
-    "$root_out_dir/version"
+    "$root_gen_dir/brave/version.h",
+    "$root_out_dir/version",
   ]
 }
 
