Override MdSettingsUI instead of patching it to enable crash reporter setting

--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -25,6 +25,8 @@ source_set("ui") {
     "webui/basic_ui.h",
     "webui/brave_adblock_ui.cc",
     "webui/brave_adblock_ui.h",
+    "webui/brave_md_settings_ui.cc",
+    "webui/brave_md_settings_ui.h",
     "webui/brave_new_tab_ui.cc",
     "webui/brave_new_tab_ui.h",
     "webui/brave_rewards_ui.cc",
