--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tslint --project tsconfig.json 'components/**/*.{ts,tsx}'",
-    "test-security": "npm audit"
+    "test-security": "npm audit",
+    "web-ui": "webpack --config components/webpack/prod.config.js --progress --profile --colors",
+    "web-ui-dev": "webpack --config components/webpack/dev.config.js --progress --profile --colors"
   },
   "repository": {
     "type": "git",
@@ -40,11 +42,36 @@
     "@types/react-dnd": "^2.0.36",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^6.0.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.24.1",
     "csstype": "^2.5.5",
+    "css-loader": "^0.28.9",
+    "file-loader": "^1.1.6",
+    "font-awesome": "^4.7.0",
+    "less": "^3.7.1",
+    "less-loader": "^4.0.5",
+    "style-loader": "^0.19.1",
+    "react": "^16.2.0",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^4.0.0",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
     "tslint-react": "^3.2.0",
-    "typescript": "^2.8.1"
+    "ts-loader": "^4.4.2",
+    "typescript": "^2.8.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
     "brave-ui": "^0.12.2",
